apps/todo-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: todo-api
  namespace: todo
  labels:
    app: todo-api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: todo-api

  template:
    metadata:
      labels:
        app: todo-api

    spec:
      serviceAccountName: todo-api-sa

      containers:
      - name: todo-api

        image: 192.168.1.50:30926/todo-api:v2

        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080

        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"
