apps/todo-api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-api-route
  namespace: todo
spec:
  parentRefs:
  - name: platform-gateway
    namespace: istio-system

  hostnames:
  - "api.todo.local"

  rules:
  - backendRefs:
    - name: todo-api
      port: 5678
