apps/todo-api/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: todo-api-policy
  namespace: todo

spec:
  podSelector:
    matchLabels:
      app: todo-api

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: todo-frontend

    ports:
    - protocol: TCP
      port: 8080

  egress:
  - to:
    - podSelector:
        matchLabels:
          app: postgres

    ports:
    - protocol: TCP
      port: 5432
